--- a/functions/traveller/client/admin.html
+++ b/functions/traveller/client/admin.html
@@ -4,7 +4,7 @@
     <div class="container py-5">
         <div class="text-center mb-3 pb-3">
             <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Admin Page</h6>
-            <h1>Add product</h1>
+            <h1>Add package</h1>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8">
@@ -13,7 +13,7 @@
                     <form name="sentMessage" id="contactForm" method="post">
                         <div class="form-row">
                             <div class="control-group col-sm-6">
-                                <input type="text" class="form-control p-4" name="name" id="name" placeholder="Product Name"
+                                <input type="text" class="form-control p-4" name="name" id="name" placeholder="Package Name"
                                     required="required" data-validation-required-message="Please enter a name" />
                                 <p class="help-block text-danger"></p>
                             </div>
