--- a/functions/traveller/client/signup.html
+++ b/functions/traveller/client/signup.html
@@ -71,7 +71,7 @@
                 </button>
               </div>
             </form>
-            <h6 align="center">Already have an account? <a href="/server/traveller/sign-in">Login</a></h6>
+            <h6 align="center">Already have an account? <a href="/server/traveller/login">Login</a></h6>
             <div class="alert alert-<%= message[1] %>"><%= message[0] %></div>
           </div>
         </div>
