--- a/functions/traveller/client/single.html
+++ b/functions/traveller/client/single.html
@@ -26,6 +26,7 @@
   <div class="container py-5">
     <div class="row">
       <div class="col-lg-8">
+        <div class="alert alert-<%= message[1] %>" align="center"><%= message[0] %></div>
         <!-- Blog Detail Start -->
         <div class="pb-3">
           <div class="blog-item">
