--- a/functions/traveller/client/login.html
+++ b/functions/traveller/client/login.html
@@ -27,6 +27,6 @@
 </head>
 <div login align="center" style="display: none;">
   <h3>You are already logged in</h3>
-  <a href="javascript:catalyst.auth.signOut(document.URL);" id="logout">Logout?</a>
+  <button class="btn btn-link" logout>Logout?</button>
 </div>
 <div id="login"></div>
