--- a/functions/traveller/client/cart.html
+++ b/functions/traveller/client/cart.html
@@ -39,5 +39,8 @@
             <% }) %>
         </div>
     </div>
+    <div class="text-center">
+        <button class="btn btn-primary py-3 px-4">Pay</button>
+    </div>
 </div>
 <!-- Packages End -->
