--- a/functions/traveller/client/cart.html
+++ b/functions/traveller/client/cart.html
@@ -14,10 +14,12 @@
                     </a>
                 </div>
             <% } %>
-            <% bookings.forEach(book => { var booking = book.Package %>
+            <%
+            var total = 0; 
+            bookings.forEach(book => { var booking = book.Package; total += booking.price; %>
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="package-item bg-white mb-2">
-                    <img class="img-fluid" src="<%= booking.mainImg %>" alt="Image">
+                    <img class="img-fluid" src="/server/traveller/<%= booking.mainImg %>" alt="Image">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-3">
                             <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i><%= booking.location %></small>
@@ -38,6 +40,9 @@
             </div>
             <% }) %>
         </div>
+    </div>
+    <div class="text-center mb-3 pb-3">
+        <h5 class="m-0">Total: $<%= total %></h5>
     </div>
     <div class="text-center">
         <button class="btn btn-primary py-3 px-4">Pay</button>
