--- a/functions/traveller/client/index.html
+++ b/functions/traveller/client/index.html
@@ -190,7 +190,7 @@
                 <% packages.forEach(pack => { var package = pack.Package %>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="package-item bg-white mb-2">
-                        <img class="img-fluid" src="<%= package.mainImg %>" alt="Image">
+                        <img class="img-fluid" src="/server/traveller/<%= package.mainImg %>" alt="Image">
                         <div class="p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i><%= package.location %></small>
