--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        window.location = "/server/traveller"
+        window.location = "/server/traveller/"
     </script>
 </head>
 <body>    
